# multicam-sim

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: kubric-hand-occluder.md  kubric-modal.md  kubric.md  renderer-eval.md  rtsp.md
examples/: assembly_station.py  hand_dose_response.py  rasterize_demo.py
recipes/: hero_gif.py  kubric_hand_occluder.py  kubric_modal.py
scripts/: render_multiview_hero.py  serve-rtsp.sh  serve_rtsp.py
src/multicam_sim/: __init__.py  annotations.py  cameras.py  dropout.py  entities.py  geometry.py  manifest.py  mtmc.py  noise.py  occluders.py  order.py  overlay.py  pose.py  scene.py  smoke.py  topology.py  validation.py  visibility.py
src/multicam_sim/dsl/: __init__.py  builder.py  depth.py  kubric_backend.py  kubric_spec.py  motion.py  occlusion.py  raster.py  render.py  rig.py
tests/: conftest.py  test_annotations.py  test_assembly_example.py  test_cameras.py  test_depth.py  test_dropout.py  test_dsl_breadth.py  test_dsl_scene.py  test_geometry.py  test_hand_labels.py  test_kubric_backend.py  test_manifest.py  test_manifest_golden.py  test_motion.py  test_mtmc.py  test_mtmc_intervals.py  test_multi_entity.py  test_noise.py  test_occluders.py  test_order.py  test_overlay.py  test_pose.py  test_pose_smoke.py  test_raster.py  test_render.py  test_rig_grid.py  test_rig_heights.py  test_smoke.py  test_stations.py  test_topology.py  test_validation.py
tests/fixtures/manifest_golden/: assembly.json  mtmc.json  smoke.json
